use alt widgets

--- a/src/alt/LiveRateBoard.html
+++ b/src/alt/LiveRateBoard.html
@@ -30,7 +30,7 @@
         <div class="entry-content elementor-7 elementor-kit-5 elementor-13 elementor-205">
             <section class="elementor-section elementor-top-section elementor-element elementor-element-ff322a5 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="ff322a5" data-element_type="section">
                 <div class="elementor-container elementor-column-gap-default">
-                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-68e74f0" data-id="68e74f0" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+                    <div class="elementor-column elementor-top-column elementor-element elementor-element-68e74f0" data-id="68e74f0" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
                         <div class="elementor-widget-wrap elementor-element-populated">
                             <div class="elementor-element elementor-element-8609224 lmd-money-back elementor-widget elementor-widget-html" data-id="8609224" data-element_type="widget" data-widget_type="html.default">
                                 <div class="elementor-widget-container">
