--- a/src/alt/InstantQuote.html
+++ b/src/alt/InstantQuote.html
@@ -34,7 +34,7 @@
     <div class="sm:invisible md:w-1/3"></div>
     <div class="sm:w-full md:w-1/3">
         <div class="entry-content elementor-7 elementor-kit-5 elementor-13 elementor-205">
-            <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-6906eb3 animated-slow animated fadeIn" data-id="6906eb3" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeIn&quot;}">
+            <div class="elementor-column elementor-top-column elementor-element elementor-element-6906eb3 animated-slow animated fadeIn" data-id="6906eb3" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeIn&quot;}">
                 <div class="elementor-widget-wrap elementor-element-populated">
                     <div class="elementor-element elementor-element-7b3a468 lmd-live-quote elementor-widget elementor-widget-html" data-id="7b3a468" data-element_type="widget" data-widget_type="html.default">
                         <div class="elementor-widget-container">
