--- a/src/tmc/InstantQuote.html
+++ b/src/tmc/InstantQuote.html
@@ -66,6 +66,7 @@
             capture_travel_information: true,
 
             // TMC Only
+            include_delivery_charge_in_calculations: getURLParameter('include_delivery_charge_in_calculations') || false,
             banner_visible: true,
             banner_link: "https://www.travelmoneyclub.co.uk/go-premium/",
             banner_text: "Go premium for even better rates",
