change alt rate comparison to dollar

--- a/src/alt/RateComparison.html
+++ b/src/alt/RateComparison.html
@@ -59,6 +59,7 @@
                 button_url: 'https://app-test.alt-nonprod.us.spendology.cloud',
                 button_text: 'GET A QUOTE',
                 poll_frequency:  60000,
+                results_message: "Save up to ${saving} right now when exchanging ${comparison_amount}"
             };
 
             SPENDOLOGY.RateComparison.new(rateComparisonOptions).render({
