--- a/src/alt/InstantQuote.html
+++ b/src/alt/InstantQuote.html
@@ -6,54 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="TravelMoneyClub.co.uk">
     <title>Instant Quote</title>
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/astra.css" rel="stylesheet">
-    <link href="css/frontend-lite.min.css" rel="stylesheet">
-    <link href="css/main.min.css" rel="stylesheet">
-    <link href="css/global.css" rel="stylesheet">
-    <link href="css/post-5.css" rel="stylesheet">
-    <link href="css/post-7.css" rel="stylesheet">
-    <link href="css/post-13.css" rel="stylesheet">
-    <link href="css/post-205.css" rel="stylesheet">
-    <link href="css/widget-carousel.min.css" rel="stylesheet">
-    <link href="css/widget-nav-menu.min.css" rel="stylesheet">
+    <link rel="stylesheet" id="astra-theme-css-css" href="css/main.min.css?ver=3.9.1" media="all">
+    <link rel="stylesheet" id="elementor-frontend-css" href="css/custom-frontend-lite.min.css?ver=1692776818" media="all">
+    <link rel="stylesheet" id="elementor-post-5-css" href="css/post-5.css" media="all">
+    <link rel="stylesheet" id="elementor-pro-css" href="css/custom-pro-frontend-lite.min.css" media="all">
+    <link rel="stylesheet" id="elementor-global-css" href="css/global.css" media="all">
+    <link rel="stylesheet" id="elementor-post-7-css" href="css/post-7.css" media="all">
+    <link rel="stylesheet" id="elementor-post-13-css" href="css/post-13.css" media="all">
+    <link rel="stylesheet" id="elementor-post-205-css" href="css/post-205.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-shared-0-css" href="css/fontawesome.min.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-fa-solid-css" href="css/solid.min.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-fa-brands-css" href="css/brands.min.css" media="all">
+    <link rel="stylesheet" href="css/custom-widget-icon-list.min.css">
+    <link rel="stylesheet" href="css/custom-widget-icon-box.min.css">
+    <link rel="stylesheet" id="e-animations-css" href="css/animations.min.css" media="all">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-
     <script type="application/javascript">
         function getURLParameter(name) {
             return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [null, ''])[1].replace(/\+/g, '%20')) || null;
         }
     </script>
 </head>
-
-<body>
+<body class="home page-template-default page page-id-7 wp-custom-logo ast-single-post ast-inherit-site-logo-transparent ast-hfb-header ast-desktop ast-page-builder-template ast-no-sidebar astra-3.9.1 elementor-default elementor-kit-5 elementor-page elementor-page-7 e--ua-blink e--ua-chrome e--ua-mac e--ua-webkit ast-mouse-clicked">
 <br />
-
 <div class="flex mb-4">
-    <div class="sm:invisible md:w-1/3"></div>
-    <div class="sm:w-full md:w-1/3">
-        <div class="entry-content elementor-7 elementor-kit-5 elementor-13 elementor-205">
-            <div class="elementor-column elementor-top-column elementor-element elementor-element-6906eb3 animated-slow animated fadeIn" data-id="6906eb3" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeIn&quot;}">
-                <div class="elementor-widget-wrap elementor-element-populated">
-                    <div class="elementor-element elementor-element-7b3a468 lmd-live-quote elementor-widget elementor-widget-html" data-id="7b3a468" data-element_type="widget" data-widget_type="html.default">
-                        <div class="elementor-widget-container">
-                            <div class="widget">
-                                <div id="InstantQuote"></div>
+    <div class="entry-content clear w-full">
+        <div class="elementor elementor-7">
+            <section class="elementor-section elementor-top-section elementor-element elementor-element-4abedd3 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default">
+                <div class="elementor-container elementor-column-gap-default">
+                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-6906eb3 animated-slow animated fadeIn">
+                        <div class="elementor-widget-wrap elementor-element-populated">
+                            <div class="elementor-element elementor-element-7b3a468 lmd-live-quote elementor-widget elementor-widget-html">
+                                <div class="elementor-widget-container">
+                                    <div class="widget">
+                                        <div id="InstantQuote"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-3de41d1">
+                        <div class="elementor-widget-wrap elementor-element-populated">
+                            <div class="elementor-element elementor-element-83b8f5f animated-slow lmd_live-quote_heading elementor-widget elementor-widget-heading animated fadeInUp">
+                                <div class="elementor-widget-container">
+                                    <h1 class="elementor-heading-title elementor-size-default">
+                                        <span style="color:#63788b">Get Your </span> Live Quote
+                                    </h1>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-3bea6b0 lmd-quote-p elementor-widget elementor-widget-heading animated slideInUp">
+                                <div class="elementor-widget-container">
+                                    <p class="elementor-heading-title elementor-size-default">Tell us how much you want to spend in US Dollars or how much foreign currency you need and see your live quote. <span style="font-family:Brownpro semibold">Happy with the quote?</span> Completing your order takes just a couple of minutes. </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </div>
-    <div class="sm:invisible md:w-1/3"></div>
 </div>
-
 <div w3-include-html="html/sprites.html" style="display:none;"></div>
 <script src="../assets/js/snippet.js"></script>
-<script defer>w3.includeHTML()</script>
-</body>
+<script defer>
+    w3.includeHTML()
+</script>
 <script>
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function() {
         var apiUrl = 'https://api-test.alt-nonprod.us.spendology.cloud';
@@ -68,7 +89,7 @@
             var instantQuoteOptions = {
                 selector: "#" + instantQuoteId,
                 api_url: apiUrl,
-                button_url: 'https://app-test.alt-nonprod.us.spendology.cloud/signup',
+                button_url: 'javascript:void(0);',
                 button_text: 'Buy now',
                 delivery_text: "* We charge £4.95 for delivery. ",
                 footer_text: "This will appear underneath the widget. You can put <b>html code</b> in here." +
@@ -80,12 +101,12 @@
             };
 
             SPENDOLOGY.InstantQuote.new(instantQuoteOptions).render({
-                selected_currency: 'USD', 	// Default selected currency
-                spend: 750,					// Default spend amount (GBP)
+                // selected_currency: 'USD', 	// Default selected currency
+                spend: 750, // Default spend amount (GBP)
                 referral_code: null,
             });
         }
-
     });
 </script>
+</body>
 </html>
