--- a/src/alt/LiveRateBoard.html
+++ b/src/alt/LiveRateBoard.html
@@ -10,32 +10,92 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/astra.css" rel="stylesheet">
-    <link href="css/frontend-lite.min.css" rel="stylesheet">
-    <link href="css/main.min.css" rel="stylesheet">
-    <link href="css/global.css" rel="stylesheet">
-    <link href="css/post-5.css" rel="stylesheet">
-    <link href="css/post-7.css" rel="stylesheet">
-    <link href="css/post-13.css" rel="stylesheet">
-    <link href="css/post-205.css" rel="stylesheet">
-    <link href="css/widget-carousel.min.css" rel="stylesheet">
-    <link href="css/widget-nav-menu.min.css" rel="stylesheet">
+    <link rel="stylesheet" id="astra-theme-css-css" href="css/main.min.css?ver=3.9.1" media="all">
+    <link rel="stylesheet" id="elementor-frontend-css" href="css/custom-frontend-lite.min.css?ver=1692776818" media="all">
+    <link rel="stylesheet" id="elementor-post-5-css" href="css/post-5.css" media="all">
+    <link rel="stylesheet" id="elementor-pro-css" href="css/custom-pro-frontend-lite.min.css" media="all">
+    <link rel="stylesheet" id="elementor-global-css" href="css/global.css" media="all">
+    <link rel="stylesheet" id="elementor-post-7-css" href="css/post-7.css" media="all">
+    <link rel="stylesheet" id="elementor-post-13-css" href="css/post-13.css" media="all">
+    <link rel="stylesheet" id="elementor-post-205-css" href="css/post-205.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-shared-0-css" href="css/fontawesome.min.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-fa-solid-css" href="css/solid.min.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-fa-brands-css" href="css/brands.min.css" media="all">
+    <link rel="stylesheet" href="css/custom-widget-icon-list.min.css">
+    <link rel="stylesheet" href="css/custom-widget-icon-box.min.css">
+    <link rel="stylesheet" id="e-animations-css" href="css/animations.min.css" media="all">
 </head>
-
-<body>
+<body class="home page-template-default page page-id-7 wp-custom-logo ast-single-post ast-inherit-site-logo-transparent ast-hfb-header ast-desktop ast-page-builder-template ast-no-sidebar astra-3.9.1 elementor-default elementor-kit-5 elementor-page elementor-page-7 e--ua-blink e--ua-chrome e--ua-mac e--ua-webkit ast-mouse-clicked">
 <br/>
-
 <div class="flex mb-4">
-    <div class="sm:invisible md:w-1/3"></div>
-    <div class="sm:w-full md:w-1/3">
-        <div class="entry-content elementor-7 elementor-kit-5 elementor-13 elementor-205">
-            <section class="elementor-section elementor-top-section elementor-element elementor-element-ff322a5 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="ff322a5" data-element_type="section">
+    <div class="entry-content clear w-full">
+        <div class="elementor elementor-7">
+            <section class="elementor-section elementor-top-section elementor-element elementor-element-ff322a5 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default">
                 <div class="elementor-container elementor-column-gap-default">
-                    <div class="elementor-column elementor-top-column elementor-element elementor-element-68e74f0" data-id="68e74f0" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-68e74f0">
                         <div class="elementor-widget-wrap elementor-element-populated">
-                            <div class="elementor-element elementor-element-8609224 lmd-money-back elementor-widget elementor-widget-html" data-id="8609224" data-element_type="widget" data-widget_type="html.default">
+                            <div class="elementor-element elementor-element-8609224 lmd-money-back elementor-widget elementor-widget-html">
                                 <div class="elementor-widget-container">
                                     <div class="widget">
                                         <div id="LiveRateBoard"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-a9fd83b elementor-align-center elementor-widget__width-initial lmd-instant-quote elementor-widget elementor-widget-button">
+                                <div class="elementor-widget-container">
+                                    <div class="elementor-button-wrapper">
+                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="#order-now">
+                                            <span class="elementor-button-content-wrapper">
+                                                <span class="elementor-button-text">Get An Instant Quote</span>
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-b62b4d0 lmd_money_back">
+                        <div class="elementor-widget-wrap elementor-element-populated">
+                            <div class="elementor-element elementor-element-6531071 animated-slow elementor-widget elementor-widget-heading animated fadeInUp">
+                                <div class="elementor-widget-container">
+                                    <h1 class="elementor-heading-title elementor-size-default">100% Money Back Guarantee</h1>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-67d40c1 elementor-position-left elementor-mobile-position-left elementor-hidden-mobile elementor-view-default elementor-vertical-align-top elementor-widget elementor-widget-icon-box">
+                                <div class="elementor-widget-container">
+                                    <div class="elementor-icon-box-wrapper">
+                                        <div class="elementor-icon-box-icon">
+                                            <span class="elementor-icon elementor-animation-">
+                                                <i aria-hidden="true" class="fas fa-shipping-fast"></i>
+                                            </span>
+                                        </div>
+                                        <div class="elementor-icon-box-content">
+                                            <h3 class="elementor-icon-box-title">
+                                                <span></span>
+                                            </h3>
+                                            <p class="elementor-icon-box-description"> In the unlikely event that UPS don’t deliver or if your order is lost, we guarantee you a hassle free Full Refund. <a
+                                                    style="font-family:'brown pro Light'; text-decoration: underline; color: #63788b;" href="/terms-conditions/">(Terms and conditions apply.)</a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-03a9feb elementor-position-left elementor-mobile-position-left elementor-hidden-desktop elementor-hidden-tablet elementor-view-default elementor-vertical-align-top elementor-widget elementor-widget-icon-box"
+                                 data-id="03a9feb" data-element_type="widget" data-widget_type="icon-box.default">
+                                <div class="elementor-widget-container">
+                                    <div class="elementor-icon-box-wrapper">
+                                        <div class="elementor-icon-box-icon">
+                                            <span class="elementor-icon elementor-animation-">
+                                                <i aria-hidden="true" class="fas fa-shipping-fast"></i>
+                                            </span>
+                                        </div>
+                                        <div class="elementor-icon-box-content">
+                                            <h3 class="elementor-icon-box-title">
+                                                <span></span>
+                                            </h3>
+                                            <p class="elementor-icon-box-description"> In the unlikely event that UPS don’t deliver or if your order is lost, we guarantee you a hassle free Full Refund. (Terms and conditions
+                                                apply.) </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -45,27 +105,26 @@
             </section>
         </div>
     </div>
-    <div class="sm:invisible md:w-1/3"></div>
 </div>
-
 <script src="../assets/js/snippet.js"></script>
-<script defer>w3.includeHTML()</script>
-</body>
+<script defer>
+    w3.includeHTML()
+</script>
 <script>
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function () {
         var apiUrl = 'https://api-test.alt-nonprod.us.spendology.cloud';
-
         var liveRateBoardId = 'LiveRateBoard';
         if (document.getElementById(liveRateBoardId)) {
             var liveRateBoardOptions = {
                 selector: "#" + liveRateBoardId,
                 api_url: apiUrl,
-                button_url: 'https://app-test.alt-nonprod.us.spendology.cloud',
-                button_text: 'GET A QUOTE',
+                button_url: 'javascript:void(0);',
+                button_text: 'Buy now',
                 refresh_interval: 60000,
             };
             SPENDOLOGY.LiveRateBoard.new(liveRateBoardOptions).render();
         }
     });
 </script>
+</body>
 </html>
