--- a/src/alt/RateComparison.html
+++ b/src/alt/RateComparison.html
@@ -6,66 +6,159 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="TravelMoneyClub.co.uk">
     <title>TravelMoneyClub</title>
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/astra.css" rel="stylesheet">
-    <link href="css/frontend-lite.min.css" rel="stylesheet">
-    <link href="css/main.min.css" rel="stylesheet">
-    <link href="css/global.css" rel="stylesheet">
-    <link href="css/post-5.css" rel="stylesheet">
-    <link href="css/post-7.css" rel="stylesheet">
-    <link href="css/post-13.css" rel="stylesheet">
-    <link href="css/post-205.css" rel="stylesheet">
-    <link href="css/widget-carousel.min.css" rel="stylesheet">
-    <link href="css/widget-nav-menu.min.css" rel="stylesheet">
-</head>
-<body>
-    <br />
+    <link rel="stylesheet" id="astra-theme-css-css" href="css/main.min.css?ver=3.9.1" media="all">
+    <link rel="stylesheet" id="elementor-frontend-css" href="css/custom-frontend-lite.min.css?ver=1692776818" media="all">
+    <link rel="stylesheet" id="elementor-post-5-css" href="css/post-5.css" media="all">
+    <link rel="stylesheet" id="elementor-pro-css" href="css/custom-pro-frontend-lite.min.css" media="all">
+    <link rel="stylesheet" id="elementor-global-css" href="css/global.css" media="all">
+    <link rel="stylesheet" id="elementor-post-7-css" href="css/post-7.css" media="all">
+    <link rel="stylesheet" id="elementor-post-13-css" href="css/post-13.css" media="all">
+    <link rel="stylesheet" id="elementor-post-205-css" href="css/post-205.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-shared-0-css" href="css/fontawesome.min.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-fa-solid-css" href="css/solid.min.css" media="all">
+    <link rel="stylesheet" id="elementor-icons-fa-brands-css" href="css/brands.min.css" media="all">
+    <link rel="stylesheet" href="css/custom-widget-icon-list.min.css">
+    <link rel="stylesheet" href="css/custom-widget-icon-box.min.css">
+    <link rel="stylesheet" id="e-animations-css" href="css/animations.min.css" media="all">
+    <style type="text/css">
+        div#RateComparisonContainer .tmc-widget-section {
+            padding-top: 10px !important;
+            padding-bottom: 57px !important;
+        }
+    </style>
+    <style>
+        /*! elementor - v3.15.0 - 09-08-2023 */
+        .elementor-heading-title {
+            padding: 0;
+            margin: 0;
+            line-height: 1
+        }
 
-    <div class="flex mb-4">
-        <div class="sm:invisible md:w-1/3"></div>
-        <div class="sm:w-full md:w-1/3">
-            <div class="elementor-7 elementor-kit-5 elementor-13 elementor-205">
-                <div class="elementor-section elementor-top-section elementor-element elementor-element-392c5b0 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default">
-                    <div class="elementor-column  elementor-top-column elementor-element elementor-element-1f78d34" data-id="1f78d34" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+        .elementor-widget-heading .elementor-heading-title[class*=elementor-size-] > a {
+            color: inherit;
+            font-size: inherit;
+            line-height: inherit
+        }
+
+        .elementor-widget-heading .elementor-heading-title.elementor-size-small {
+            font-size: 15px
+        }
+
+        .elementor-widget-heading .elementor-heading-title.elementor-size-medium {
+            font-size: 19px
+        }
+
+        .elementor-widget-heading .elementor-heading-title.elementor-size-large {
+            font-size: 29px
+        }
+
+        .elementor-widget-heading .elementor-heading-title.elementor-size-xl {
+            font-size: 39px
+        }
+
+        .elementor-widget-heading .elementor-heading-title.elementor-size-xxl {
+            font-size: 59px
+        }
+    </style>
+</head>
+<body class="home page-template-default page page-id-7 wp-custom-logo ast-single-post ast-inherit-site-logo-transparent ast-hfb-header ast-desktop ast-page-builder-template ast-no-sidebar astra-3.9.1 elementor-default elementor-kit-5 elementor-page elementor-page-7 e--ua-blink e--ua-chrome e--ua-mac e--ua-webkit ast-mouse-clicked">
+<br/>
+<div class="flex mb-4">
+    <div class="entry-content clear w-full">
+        <div class="elementor elementor-7">
+            <section class="elementor-section elementor-top-section elementor-element elementor-element-392c5b0 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default">
+                <div class="elementor-container elementor-column-gap-wider">
+                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-1f78d34">
                         <div class="elementor-widget-wrap elementor-element-populated">
-                            <div class="elementor-element elementor-element-0b7bac2 lmd-our-rate elementor-widget elementor-widget-html" data-id="0b7bac2" data-element_type="widget" data-widget_type="html.default">
+                            <div class="elementor-element elementor-element-0b7bac2 lmd-our-rate elementor-widget elementor-widget-html">
                                 <div class="elementor-widget-container">
                                     <div id="RateComparison"></div>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-512703c elementor-align-justify elementor-widget__width-initial elementor-widget elementor-widget-button">
+                                <div class="elementor-widget-container">
+                                    <div class="elementor-button-wrapper">
+                                        <a class="elementor-button elementor-button-link elementor-size-sm" href="#order-now">
+                                            <span class="elementor-button-content-wrapper">
+                                                <span class="elementor-button-text">ORDER NOW</span>
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-7050d94">
+                        <div class="elementor-widget-wrap elementor-element-populated">
+                            <div class="elementor-element elementor-element-e5e8832 animated-slow lmd_how_much_heading elementor-widget elementor-widget-heading animated fadeInUp">
+                                <div class="elementor-widget-container">
+                                    <h1 class="elementor-heading-title elementor-size-default">
+                                        <span style="color:#63788b">How Much</span> Can You Save?
+                                    </h1>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-04414b2 elementor-widget elementor-widget-heading">
+                                <div class="elementor-widget-container">
+                                    <p class="elementor-heading-title elementor-size-default">
+                                        ALTOUR Foreign Currency offers great exchange rates on 65 currencies. For leisure vacations or business travel, ALTOUR Foreign Currency has everything you need.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-81c70ec elementor-icon-list--layout-inline elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list">
+                                <div class="elementor-widget-container">
+                                    <ul class="elementor-icon-list-items elementor-inline-items">
+                                        <li class="elementor-icon-list-item elementor-inline-item">
+                                            <span class="elementor-icon-list-icon">
+                                                <i aria-hidden="true" class="fas fa-arrow-circle-left"></i>
+                                            </span>
+                                            <span class="elementor-icon-list-text">
+                                                <span style="font-family:Brownpro semibold">Try us out and see for yourself</span>
+                                            </span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="elementor-element elementor-element-cf097fb elementor-widget elementor-widget-html">
+                                <div class="elementor-widget-container">
+                                    <script>
+                                        document.getElementsByClassName('btn-full-width').onclick = function () {
+                                            alert("Hello World!");
+                                        };
+                                    </script>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
-        <div class="sm:invisible md:w-1/3"></div>
     </div>
-
-    <script type="text/javascript" src="../assets/js/snippet.js"></script>
-</body>
+</div>
+<script type="text/javascript" src="../assets/js/snippet.js"></script>
 <script>
     window.addEventListener('SPENDOLOGY_WIDGETS_LOADED', function () {
         var apiUrl = 'https://api-test.alt-nonprod.us.spendology.cloud';
-
         /*************************************************
          * Rate Comparison
          **************************************************/
         var rateComparisonId = 'RateComparison';
-        if ( document.getElementById(rateComparisonId)) {
+        if (document.getElementById(rateComparisonId)) {
             var rateComparisonOptions = {
                 selector: "#" + rateComparisonId,
                 api_url: apiUrl,
-                button_url: 'https://app-test.alt-nonprod.us.spendology.cloud',
-                button_text: 'GET A QUOTE',
+                button_url: 'javascript:void(0);',
+                button_text: 'Buy now',
                 poll_frequency:  60000,
-                results_message: "Save up to ${saving} right now when exchanging ${comparison_amount}"
             };
-
             SPENDOLOGY.RateComparison.new(rateComparisonOptions).render({
                 currencies: []
             });
         }
     });
 </script>
+</body>
 </html>
