--- a/src/alt/InstantQuote.html
+++ b/src/alt/InstantQuote.html
@@ -89,8 +89,7 @@
             var instantQuoteOptions = {
                 selector: "#" + instantQuoteId,
                 api_url: apiUrl,
-                button_url: 'javascript:void(0);',
-                button_text: 'Buy now',
+                button_url: 'https://app-test.alt-nonprod.us.spendology.cloud/signup',
                 delivery_text: "* We charge £4.95 for delivery. ",
                 footer_text: "This will appear underneath the widget. You can put <b>html code</b> in here." +
                     " Usually this text has a link to your <a href\"#privacy_policy\">privacy policy</a> and other " +
