--- a/src/alt/InstantQuote.html
+++ b/src/alt/InstantQuote.html
@@ -90,18 +90,10 @@
                 selector: "#" + instantQuoteId,
                 api_url: apiUrl,
                 button_url: 'https://app-test.alt-nonprod.us.spendology.cloud/signup',
-                delivery_text: "* We charge £4.95 for delivery. ",
-                footer_text: "This will appear underneath the widget. You can put <b>html code</b> in here." +
-                    " Usually this text has a link to your <a href\"#privacy_policy\">privacy policy</a> and other " +
-                    "disclaimers. For example:<br /><br />" +
-                    "Please note that we always round the foreign currency to the lowest available denomination. The " +
-                    "exchange rate shown is constantly updated with the latest market data so costs may go up and down."
-                ,
             };
 
             SPENDOLOGY.InstantQuote.new(instantQuoteOptions).render({
-                // selected_currency: 'USD', 	// Default selected currency
-                spend: 750, // Default spend amount (GBP)
+                spend: 750,
                 referral_code: null,
             });
         }
